Fixed about page not showing any content.

--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,6 @@ a:hover, #indexhamburger:hover{
 }
 
 .description {
-	display: none;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
